examples/test/testpolicy5498.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5498
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key29: value15
      key41: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value8
          key39: value47
      podSelector:
        matchLabels:
          key48: value23
